<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.linktop.utils.Translate" />

        <import type="android.view.View" />

        <variable
            name="content"
            type="demo.minttihealth.fmt.MeasureFragment" />

        <variable
            name="isUnitF"
            type="androidx.databinding.ObservableBoolean" />

        <variable
            name="model"
            type="demo.minttihealth.bean.Bt" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="36sp"
            app:formatTemp="@{model.temp}"
            app:tempUnitF="@{isUnitF}" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/temp_unit_c"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/temp_unit_f"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{content::clickMeasure}"
            android:text="@string/start_measuring"
            android:textAllCaps="false"
            android:textSize="12sp" />

    </LinearLayout>

</layout>
